Add Java 17 support (#1)
Co-authored-by: bgonnot <boris.gonnot@factset.com>